--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <h2>Описание преимуществ</h2>
             </div>
         </section>
-        <stection>
+        <section>
             <div>
                 <h2>Услуга дня</h2>
                 <span> Лучшее предложение услуг (описание)</span>
             </div>
-        </stection>
+        </section>
         <section>
             <ul>
                 <li>
