--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             </ul>
         </nav>
         <a href="login.html">Вход</a>
+        <form action="/"
+        <h1>Вход в личный кабинет</h1>
+        <input type="email" name="email" placeholder="Электронная почта" required>
+        <input type="password" name="password" placeholder="Пароль" required>
+        <button type="submit">Войти</button>
+        <label>
+            <input type="checkbox" checked="checked" name="remember">Запомнить меня
+        </label>
+    </form>
     </header>
     <main class="main">
         <section>
