--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru/en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Массажный салон</title>
 </head>
 <body>
-    <header>
-        img scr="images/Logo_-_Good4Me_140x 1.svg" alt="Логотип" width="150" heigh="150"
-        <h1> Массажный салон </h1>
-        <br> <nav>
-            <ul>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Статьи</a></li>
-                <li><a href="#">Календарь</a></li>
-                <li><a href="#">Обзоры</a></li>
-                <li><a href="#">Акции</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Контакты</a></li>
+    <header class="header">
+        <img class="header__logo" scr="images/Logo_-_Good4Me_140x 1.svg" alt="Логотип" width="150" heigh="150"
+        <h1 class="header__title"> Массажный салон </h1>
+        <br> <nav class="header__menu">
+            <ul class="menu">
+                <li class="menu__item menu__item--active">
+                    <a class="menu__link" href="index.html">Главная</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Услуги</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Статьи</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu-link" href="#">Календарь</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Обзоры</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Акции</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Отзывы</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">Контакты</a>
+                </li>
             </ul>
         </nav>
-        <a href="login.html">Вход</a>
-        <form action="/"
+        <form class="header__search-form">
+            <input class="header__search-form__input" type="input">
+            <button class="header__search-from__button" type="button">
+        </form>
+        <a class="header__button" href="login.html">Вход</a>
+        <form action="/">
         <h1>Вход в личный кабинет</h1>
         <input type="email" name="email" placeholder="Электронная почта" required>
         <input type="password" name="password" placeholder="Пароль" required>
@@ -29,48 +50,56 @@
         <label>
             <input type="checkbox" checked="checked" name="remember">Запомнить меня
         </label>
+        <a class="header__button" href="registration.html">Регистрация</a>
     </form>
     </header>
     <main class="main">
         <section>
-            <div>
-                <h2>Описание преимуществ</h2>
+            <div class="about-us">
+                <h2 class="about-us__title">Наши преимущества</h2>
+                <p class="about-us__text" >Салон предоставляет расслабляющий массаж всего тела, также предосталяются дополнительные услуги: аромотерапия, кофейные скрабы, чайные церемонии </p>
             </div>
         </section>
         <section>
-            <div>
-                <h2>Услуга дня</h2>
-                <span> Лучшее предложение услуг (описание)</span>
+            <div class="service"> 
+                <h2 class="service__title">Услуга дня</h2>
+                <p class="service__text">Ванночки для ног с аромомаслами</p>
+                <p class="servise__text card__text--secondary">Услуга действует бесплатно при сеансе массажа стоп</p>
+                <a class="service__button button" href="#">Узнать больше</a>
             </div>
         </section>
         <section>
-            <ul>
+            <ul class="card">
                 <li>
-                    <h2>Скидки</h2>
-                    <a href="#">Узнать подробнее</a>
+                <h2 class="card__title">Скидки</h2>
+                <p class="card__text">Первые сеансы со скидкой 20%</p>
+                <p class="card__text card__text--secondary">Вы можете использовать скидку при первом посещении массажного салона</p>
+                <a class="card__button button" href="#">Узнать больше</a>
                 </li>
                 <li>
-                    <h2>Акции</h2>
-                    <a href="#">Узнать подробнее</a>
+                <h2 class="card__title">Акции</h2>
+                <p class="card__text">"Приведи друга"</p>
+                <p class="card__text card__text--secondary">Скидка клиенту и его другу, если они приходят вместе</p>
+                <a class="card__button button" href="#">Узнать больше</a>
                 </li>
             </ul>
         </section>
         <section>
-            <div>
-                <h2>Читатйте полезную информацию о нашем блоге</h2>
+            <div class="articles">
+                <h2 class="articles__title">Читатйте полезную информацию в наших статьях</h2>
             </div>
-            <ul>
+            <ul class="articles-menu">
                 <li>
-                    <h2>Чем полезен массаж?</h2>
-                    <a href="#">Узнать подробнее</a>
+                    <h2 class="articles-menu__title">Чем полезен массаж?</h2>
+                    <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
                 <li>
-                    <h2>Виды массажа</h2>
-                    <a href="#">Узнать подробнее</a>
+                    <h2 class="articles-menu__title">Виды массажа</h2>
+                    <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
                 <li>
-                    <h2>Продукция, используемая при массаже</h2>
-                    <a href="#">Узнать подробнее</a>
+                    <h2 class="articles-menu__title">Продукция, используемая при массаже</h2>
+                    <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
             </ul>
         </section>
@@ -78,7 +107,7 @@
             <h2>Контакты</h2>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Сайт создан Тимшиной Аленой группа МИ-41</p>
         <ul>
             <li><a href="#">Правовая политика</a></li>
