--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru/en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,8 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" scr="images/Logo_-_Good4Me_140x 1.svg" alt="Логотип" width="150" heigh="150"
-        <h1 class="header__title"> Массажный салон </h1>
+        <img class="header__logo" img="images/Logo_-_Good4Me_140x 1.svg" alt="Логотип" width="150" heigh="150"
+        <h1 class="header__title"> Массажный салон</h1>
         <br> <nav class="header__menu">
             <ul class="menu">
                 <li class="menu__item menu__item--active">
@@ -57,13 +57,13 @@
         <section>
             <div class="about-us">
                 <h2 class="about-us__title">Наши преимущества</h2>
-                <p class="about-us__text" >Салон предоставляет расслабляющий массаж всего тела, также предосталяются дополнительные услуги: аромотерапия, кофейные скрабы, чайные церемонии </p>
+                <p class="about-us__text" >Салон предоставляет расслабляющий массаж всего тела, также предоставляются дополнительные услуги: ароматерапия, кофейные скрабы, чайные церемонии </p>
             </div>
         </section>
         <section>
             <div class="service"> 
                 <h2 class="service__title">Услуга дня</h2>
-                <p class="service__text">Ванночки для ног с аромомаслами</p>
+                <p class="service__text">Ванночки для ног с аромамаслами</p>
                 <p class="servise__text card__text--secondary">Услуга действует бесплатно при сеансе массажа стоп</p>
                 <a class="service__button button" href="#">Узнать больше</a>
             </div>
