--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <style>
-    .header {
-
+    .header{
+        width: 100%;
+	background: #c48cdc;
+	height: 70px;
     }
 </style>
 </head>
@@ -48,7 +50,6 @@
             <input class="header__search-form__input" type="text">
             <button class="header__search-from__button" type="search">Поиск</button>
         </form>
-        <a class="header__button" href="login.html">Вход</a>
         <form action="/">
         <h1>Вход в личный кабинет</h1>
         <input type="email" name="email" placeholder="Электронная почта" required>
