--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	background: #c48cdc;
 	height: 70px;
     }
+
 </style>
 </head>
 <body>
@@ -50,6 +51,7 @@
             <input class="header__search-form__input" type="text">
             <button class="header__search-from__button" type="search">Поиск</button>
         </form>
+        <a class="header__button" href="login.html">Вход</a>
         <form action="/">
         <h1>Вход в личный кабинет</h1>
         <input type="email" name="email" placeholder="Электронная почта" required>
@@ -66,6 +68,7 @@
             <div class="about-us">
                 <h2 class="about-us__title">Наши преимущества</h2>
                 <p class="about-us__text" >Мы - команда массажистов, готовые помочь вам расслабиться и восстановить силы</p>
+                <p\ class="about-us__text"> Мы предлагаем лучшие массажные услуги для вашего здоровья и расслабления\.</p\>
                 <p class="about-us__text" >Салон предоставляет расслабляющий массаж всего тела, также предоставляются дополнительные услуги: ароматерапия, кофейные скрабы, чайные церемонии </p>
             </div>
         </section>
