--- a/index.html
+++ b/index.html
@@ -8,46 +8,45 @@
     <link rel="stylesheet" href="styles/style.css">
     <style>
     .header{
- 
+       
     }
-
 </style>
 </head>
 <body>
     <header class="header container">
-        <img class="header__logo" src="images/Logo_-_Good4Me_140x 1.svg" alt="Логотип" width="150" heigh="150">
+        <img class="header__logo" src="" alt="Логотип" width="150" heigh="150">
         <h1 class="header__title"> Массажный центр</h1>
         <br> <nav class="header__menu">
             <ul class="menu">
                 <li class="menu__item menu__item--active">
                     <a class="menu__link" href="index.html">Главная</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Услуги</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Статьи</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu-link" href="#">Календарь</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Обзоры</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Акции</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Отзывы</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Контакты</a>
                 </li>
             </ul>
         </nav>
         <form class="header__search-form">
             <input class="header__search-form__input" type="text">
-            <button class="header__search-from__button" type="search">Поиск</button>
+            <button class="header__search-form__button" type="search">Поиск</button>
         </form>
         <a class="header__button" href="login.html">Вход</a>
         <form action="/">
