--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="menu__link" href="#">Статьи</a>
                 </li>
                 <li class="menu__item menu__item--active">
-                    <a class="menu-link" href="#">Календарь</a>
+                    <a class="menu__link" href="#">Календарь</a>
                 </li>
                 <li class="menu__item menu__item--active">
                     <a class="menu__link" href="#">Обзоры</a>
