--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header container">
-        <img class="header__logo" src="" alt="Логотип" width="150" heigh="150">
+        <img class="header__logo" src="images/image.png" alt="Логотип" width="150" heigh="150">
         <h1 class="header__title"> Массажный центр</h1>
         <br> <nav class="header__menu">
             <ul class="menu">
