--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 </head>
 <body>
     <header class="header container">
-        <img class="header__logo" src="images/image.png" alt="Логотип" width="150" heigh="150">
+        <a class="header__logo-wrap" href="index.html">
+              <img class="header__logo-wrap" src="images/image.png" alt="Логотип" width="150" heigh="150">
         <h1 class="header__title"> Массажный центр</h1>
+        </a>
+        <div class="header__buttons">
+            <a class="header__button" href="login.html">Вход</a>
+        <a class="header__button" href="registration.html">Регистрация</a>
+        </div>
         <br> <nav class="header__menu">
             <ul class="menu">
                 <li class="menu__item menu__item--active">
@@ -48,8 +54,6 @@
             <input class="header__search-form__input" type="text">
             <button class="header__search-form__button" type="search">Поиск</button>
         </form>
-        <a class="header__button" href="login.html">Вход</a>
-        <a class="header__button" href="registration.html">Регистрация</a>
         <form action="/">
         <h1>Вход в личный кабинет</h1>
         <input type="email" name="email" placeholder="Электронная почта" required>
