--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
     </form>
     </header>
     <main class="main container">
-        <section>
-            <div class="about-us">
+        <section class="about-us">
+             <div class="about__wrap-left">
                 <h2 class="about-us__title">Наши преимущества</h2>
                 <p class="about-us__text" >Мы - команда массажистов, готовые помочь вам расслабиться и восстановить силы</p>
                 <p\ class="about-us__text"> Мы предлагаем лучшие массажные услуги для вашего здоровья и расслабления\.</p\>
                 <p class="about-us__text" >Салон предоставляет расслабляющий массаж всего тела, также предоставляются дополнительные услуги: ароматерапия, кофейные скрабы, чайные церемонии </p>
+                <a class="about__button" href="#">Записаться на консультацию</a>
             </div>
+            <div class="about__wrap-right">
+                <img class="about__image" scr="images/about__image.png" alt="Картинка массажа" width="750" height="175">
+         </div>
         </section>
-        <section>
+        <section class="service">
             <div class="service"> 
                 <h2 class="service__title">Услуга дня</h2>
                 <p class="service__text">Ванночки для ног с аромамаслами</p>
@@ -81,7 +85,7 @@
                 <a class="service__button button" href="#">Узнать больше</a>
             </div>
         </section>
-        <section>
+        <section class="card">
             <ul class="card">
                 <li>
                 <h2 class="card__title">Скидки</h2>
@@ -97,7 +101,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="articles">
             <div class="articles">
                 <h2 class="articles__title">Читатйте полезную информацию в наших статьях</h2>
             </div>
