--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="header container">
         <a class="header__logo-wrap" href="index.html">
-              <img class="header__logo-wrap" src="images/image.png" alt="Логотип" width="150" heigh="150">
-        <h1 class="header__title"> Массажный центр</h1>
+              <img class="header__logo-wrap" src="images/icons8-массаж-64.png" alt="Логотип" width="150" heigh="150">
+        <h1 class="header__title"> Безмятежное касание</h1>
         </a>
         <div class="header__buttons">
             <a class="header__button" href="login.html">Вход</a>
@@ -103,14 +103,17 @@
             <ul class="articles-menu">
                 <li>
                     <h2 class="articles-menu__title">Чем полезен массаж?</h2>
+                    <p class="article-menu__text" > Массаж помогает расслабить мышцы, уменьшить их напряжение и спазмы...</p>
                     <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
                 <li>
                     <h2 class="articles-menu__title">Виды массажа</h2>
+                     <p class="article-menu__text" >Массаж может охватывать всё тело или быть направлен на определённые зоны (лицо, шея, воротниковая зона, ноги, живот и...)</p>
                     <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
                 <li>
                     <h2 class="articles-menu__title">Продукция, используемая при массаже</h2>
+                    <p class="article-menu__text" >Массажное масло. Существует ряд техник, которые невозможно провести без массажного масла. Оно может быть согревающим, охлаждающим, иметь дополнительный запах для расслабления...</p>
                     <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
             </ul>
