--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
             <ul class="articles-menu">
                 <li>
                     <h2 class="articles-menu__title">Чем полезен массаж?</h2>
-                    <p class="article-menu__text" > Массаж помогает расслабить мышцы, уменьшить их напряжение и спазмы...</p>
+                    <p class="articles-menu__text" > Массаж помогает расслабить мышцы, уменьшить их напряжение и спазмы...</p>
                     <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
                 <li>
                     <h2 class="articles-menu__title">Виды массажа</h2>
-                     <p class="article-menu__text" >Массаж может охватывать всё тело или быть направлен на определённые зоны (лицо, шея, воротниковая зона, ноги, живот и...)</p>
+                     <p class="articles-menu__text" >Массаж может охватывать всё тело или быть направлен на определённые зоны (лицо, шея, воротниковая зона, ноги, живот и...)</p>
                     <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
                 <li>
                     <h2 class="articles-menu__title">Продукция, используемая при массаже</h2>
-                    <p class="article-menu__text" >Массажное масло. Существует ряд техник, которые невозможно провести без массажного масла. Оно может быть согревающим, охлаждающим, иметь дополнительный запах для расслабления...</p>
+                    <p class="articles-menu__text" >Массажное масло. Существует ряд техник, которые невозможно провести без массажного масла. Оно может быть согревающим, охлаждающим, иметь дополнительный запах для расслабления...</p>
                     <a class="articles-menu__button button" href="#">Узнать подробнее</a>
                 </li>
             </ul>
