--- a/index.html
+++ b/index.html
@@ -1,138 +1,78 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Массажный центр</title>
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>КВЦ «Башня» — Йошкар-Ола</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header container">
-        <a class="header__logo-wrap" href="index.html">
-              <img class="header__logo-wrap" src="images/icons8-массаж-64.png" alt="Логотип" width="150" heigh="150">
-        <h1 class="header__title"> Безмятежное касание</h1>
-        </a>
-        <div class="header__buttons">
-            <a class="header__button" href="login.html">Вход</a>
-        <a class="header__button" href="registration.html">Регистрация</a>
+<header>
+    <strong>КВЦ «Башня»</strong>
+    <nav>
+        <a href="exhibitions.html">Актуальные выставки</a>
+        <a href="about.html">О музее</a>
+        <a href="gallery.html">Галерея</a>
+        <a class="buy-ticket" href="ticket.html">Купить билет</a>
+    </nav>
+    <div class="sidebar">
+        <a href="#contacts">Контакты</a>
+    </div>
+</header>
+
+<main>
+    <div class="hero">
+        <h2>«Времени нет» — философская выставка о времени</h2>
+        <p>Современное искусство из Казани, Москвы, США и Индии</p>
+        <a class="btn" href="exhibitions.html">Узнать больше</a>
+    </div>
+
+    <div class="welcome">
+        <div class="card">
+            <h3>Добро пожаловать!</h3>
+            <p>Культурно‑выставочный центр «Башня» приглашает вас в мир искусства и культуры в самом сердце Йошкар-Олы!</p>
+            <a class="btn" href="about.html">Узнать больше</a>
         </div>
-        <br> <nav class="header__menu">
-            <ul class="menu">
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="index.html">Главная</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Услуги</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Статьи</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Календарь</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Обзоры</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Акции</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Отзывы</a>
-                </li>
-                <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <form class="header__search-form">
-            <input class="header__search-form__input" type="text">
-            <button class="header__search-form__button" type="search">Поиск</button>
-        </form>
-        <form action="/">
-        <h1>Вход в личный кабинет</h1>
-        <input type="email" name="email" placeholder="Электронная почта" required>
-        <input type="password" name="password" placeholder="Пароль" required>
-        <button type="submit">Войти</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember">Запомнить меня
-        </label>
-    </form>
-    </header>
-    <main class="main container">
-        <section class="about-us">
-             <div class="about__wrap-left">
-                <h2 class="about-us__title">Наши преимущества</h2>
-                <p class="about-us__text" >Мы - команда массажистов, готовые помочь вам расслабиться и восстановить силы</p>
-                <p\ class="about-us__text"> Мы предлагаем лучшие массажные услуги для вашего здоровья и расслабления\.</p\>
-                <p class="about-us__text" >Салон предоставляет расслабляющий массаж всего тела, также предоставляются дополнительные услуги: ароматерапия, кофейные скрабы, чайные церемонии </p>
-                <a class="about__button" href="#">Записаться на консультацию</a>
-            </div>
-            <div class="about__wrap-right">
-                <img class="about__image" scr="images/about__image.png" alt="Картинка массажа" width="750" height="175">
-         </div>
-        </section>
-        <section class="service">
-            <div class="service"> 
-                <h2 class="service__title">Услуга дня</h2>
-                <p class="service__text">Ванночки для ног с аромамаслами</p>
-                <p class="servise__text card__text--secondary">Услуга действует бесплатно при сеансе массажа стоп</p>
-                <a class="service__button button" href="#">Узнать больше</a>
-            </div>
-        </section>
-        <section class="card">
-            <ul class="card">
-                <li>
-                <h2 class="card__title">Скидки</h2>
-                <p class="card__text">Первые сеансы со скидкой 20%</p>
-                <p class="card__text card__text--secondary">Вы можете использовать скидку при первом посещении массажного салона</p>
-                <a class="card__button button" href="#">Узнать больше</a>
-                </li>
-                <li>
-                <h2 class="card__title">Акции</h2>
-                <p class="card__text">"Приведи друга"</p>
-                <p class="card__text card__text--secondary">Скидка клиенту и его другу, если они приходят вместе</p>
-                <a class="card__button button" href="#">Узнать больше</a>
-                </li>
-            </ul>
-        </section>
-        <section class="articles">
-            <div class="articles">
-                <h2 class="articles__title">Читатйте полезную информацию в наших статьях</h2>
-            </div>
-            <ul class="articles-menu">
-                <li>
-                    <h2 class="articles-menu__title">Чем полезен массаж?</h2>
-                    <p class="articles-menu__text" > Массаж помогает расслабить мышцы, уменьшить их напряжение и спазмы...</p>
-                    <a class="articles-menu__button button" href="#">Узнать подробнее</a>
-                </li>
-                <li>
-                    <h2 class="articles-menu__title">Виды массажа</h2>
-                     <p class="articles-menu__text" >Массаж может охватывать всё тело или быть направлен на определённые зоны (лицо, шея, воротниковая зона, ноги, живот и...)</p>
-                    <a class="articles-menu__button button" href="#">Узнать подробнее</a>
-                </li>
-                <li>
-                    <h2 class="articles-menu__title">Продукция, используемая при массаже</h2>
-                    <p class="articles-menu__text" >Массажное масло. Существует ряд техник, которые невозможно провести без массажного масла. Оно может быть согревающим, охлаждающим, иметь дополнительный запах для расслабления...</p>
-                    <a class="articles-menu__button button" href="#">Узнать подробнее</a>
-                </li>
-            </ul>
-        </section>
-        <section  id="contacts">
-            <h2>Контакты</h2>
-            <p>Телефон: +7 (952) 721-34-65</p>
-            <p>Email: t30alena@gmail.com
-        </section>
-    </main>
-    <footer class="footer container">
-        <p>&copy; 2025 Массажный центр </p>
-        <p>Сайт создан Тимшиной Аленой группа МИ-41</p>
-        <ul>
-            <li><a href="#">Правовая политика</a></li>
-            <li><a href="#">Пользовательское соглашение</a></li>
-            <li><a href="#">Политика конфиденциальности</a></li>
-        </ul>
-    </footer>
-    <script scr="script.js"></script>
+        <div class="card">
+            <img src="./images/main.jpg" alt="Башня" />
+        </div>
+    </div>
+</main>
+
+<section class="announcements">
+    <h3>Анонсы выставок</h3>
+    <div class="image-grid">
+        <img src="./images/pic/pic.jpg" alt="Выставка 1" />
+        <img src="./images/pic/pic2.jpg" alt="Выставка 2" />
+        <img src="./images/pic/pic3.jpg" alt="Выставка 3" />
+        <img src="./images/pic/pic4.jpg" alt="Выставка 4" />
+        <img src="./images/pic/pic5.jpg" alt="Выставка 5" />
+        <img src="./images/pic/pic6.jpg" alt="Выставка 6" />
+    </div>
+    <p class="announcement-text">
+        Современные выставки из Казани, Москвы, США и Индии — живопись, фотография, графика и инсталляции.
+        Узнайте, как художники осмысляют время и культуру сегодня.
+    </p>
+    <div class="btn-wrapper">
+        <a class="btn" href="exhibitions.html">Узнать больше о выставках</a>
+    </div>
+</section>
+
+
+<section id="contacts" class="info-section">
+    <div class="card">
+        <img src="./images/gallery/Y33Dj3K10vo.jpg" alt="Картинка выставки" />
+    </div>
+    <div class="card">
+        <div class="info-header">Информация для посетителей</div>
+        <p><strong>Часы работы:</strong><br>вт-вс: 10:00 – 18:00<br>Пн – выходной</p>
+        <p><strong>Контактные данные:</strong><br>Йошкар-Ола, площадь Республики, Благовещенская башня, 3 этаж<br>Тел: +7 (8362) 45-67-89</p>
+    </div>
+</section>
+
+<footer>
+    © 2025 Культурно-выставочный центр «Башня», Йошкар-Ола
+</footer>
 </body>
 </html>
