--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>КВЦ «Башня» — Йошкар-Ола</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<header>
+<header class="header container">
     <strong>КВЦ «Башня»</strong>
     <nav>
         <a href="exhibitions.html">Актуальные выставки</a>
@@ -20,14 +20,12 @@
         <a href="#contacts">Контакты</a>
     </div>
 </header>
-
-<main>
+<main class="main container">
     <div class="hero">
         <h2>«Времени нет» — философская выставка о времени</h2>
         <p>Современное искусство из Казани, Москвы, США и Индии</p>
         <a class="btn" href="exhibitions.html">Узнать больше</a>
     </div>
-
     <div class="welcome">
         <div class="card">
             <h3>Добро пожаловать!</h3>
@@ -39,7 +37,6 @@
         </div>
     </div>
 </main>
-
 <section class="announcements">
     <h3>Анонсы выставок</h3>
     <div class="image-grid">
@@ -58,8 +55,6 @@
         <a class="btn" href="exhibitions.html">Узнать больше о выставках</a>
     </div>
 </section>
-
-
 <section id="contacts" class="info-section">
     <div class="card">
         <img src="./images/gallery/Y33Dj3K10vo.jpg" alt="Картинка выставки" />
@@ -70,9 +65,14 @@
         <p><strong>Контактные данные:</strong><br>Йошкар-Ола, площадь Республики, Благовещенская башня, 3 этаж<br>Тел: +7 (8362) 45-67-89</p>
     </div>
 </section>
-
-<footer>
-    © 2025 Культурно-выставочный центр «Башня», Йошкар-Ола
+<footer class="footer container">
+        © 2025 Культурно-выставочный центр «Башня», Йошкар-Ола
+        <p>Сайт создан группой МИ(41,42): Тимшина Алена, Фоминых Александра, Купцова Дарья, Кабартова Анна, Мунарев Родион</p>
+        <ul>
+            <li><a href="#">Правовая политика</a></li>
+            <li><a href="#">Пользовательское соглашение</a></li>
+            <li><a href="#">Политика конфиденциальности</a></li>
+        </ul>>
 </footer>
 </body>
 </html>
