--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <footer class="footer container">
         © 2025 Культурно-выставочный центр «Башня», Йошкар-Ола
         <p>Сайт создан группой МИ(41,42): Тимшина Алена, Фоминых Александра, Купцова Дарья, Кабартова Анна, Мунарев Родион</p>
-        <ul>
-            <li><a href="#">Правовая политика</a></li>
-            <li><a href="#">Пользовательское соглашение</a></li>
-            <li><a href="#">Политика конфиденциальности</a></li>
+    <ul>    
+    <p><a href="#">Правовая политика</a></p>
+            <p><a href="#">Пользовательское соглашение</a></p>
+            <p><a href="#">Политика конфиденциальности</a></p>
         </ul>>
 </footer>
 </body>
