--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 <section class="announcements">
     <h3>Анонсы выставок</h3>
     <div class="image-grid">
-        <img src="./images/pic/pic.jpg" alt="Выставка 1" />
-        <img src="./images/pic/pic2.jpg" alt="Выставка 2" />
-        <img src="./images/pic/pic3.jpg" alt="Выставка 3" />
-        <img src="./images/pic/pic4.jpg" alt="Выставка 4" />
-        <img src="./images/pic/pic5.jpg" alt="Выставка 5" />
-        <img src="./images/pic/pic6.jpg" alt="Выставка 6" />
+        <img src="./images/pic.jpg" alt="Выставка 1" />
+        <img src="./images/pic2.jpg" alt="Выставка 2" />
+        <img src="./images/pic3.jpg" alt="Выставка 3" />
+        <img src="./images/pic4.jpg" alt="Выставка 4" />
+        <img src="./images/pic5.jpg" alt="Выставка 5" />
+        <img src="./images/pic6.jpg" alt="Выставка 6" />
     </div>
     <p class="announcement-text">
         Современные выставки из Казани, Москвы, США и Индии — живопись, фотография, графика и инсталляции.
@@ -57,7 +57,7 @@
 </section>
 <section id="contacts" class="info-section">
     <div class="card">
-        <img src="./images/gallery/Y33Dj3K10vo.jpg" alt="Картинка выставки" />
+        <img src="./images/Y33Dj3K10vo.jpg" alt="Картинка выставки" />
     </div>
     <div class="card">
         <div class="info-header">Информация для посетителей</div>
